<resources>
    <string name="app_name">StratAPITest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="year_edit_text">Choose a year to sort by</string>
    <string name="value_edit_text">Enter the value to sort by</string>
    <string name="choose_parameter_text">Choose a parameter to sort by</string>
    <string name="filter_button_text">Apply filter</string>
    <string name="title_activity_display_players_in_pack">DisplayPlayersInPack</string>
    <string name="listing_info_string">This is the list of players in that pack. Click a player to see more detailed stats
                                        about them.</string>
    <string name="title_activity_display_player_stats">DisplayPlayerStats</string>
    <string name="stat_info_string">These are the stats about that player.</string>
    <string name="search_instructions_string">Search for packs that you don\'t own by city and year.</string>
    <string name="card_sort_button_text">Sort cards instead</string>
    <string name="title_activity_sort_cards">SortCards</string>
    <string name="card_search_instruction_string">Sort cards based on their numerical stats</string>
    <string name="sort_packs_button_text">Sort Packs instead</string>
    <string name="load_more_button_text">Load more cards</string>
    <string name="load_more_packs_text">Load more packs</string>
    <string name="clear_button_text">Clear all data</string>
    <string name="city_choice_instructions">Choose a city that you want to view.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_text">Login</string>
    <string name="signup_button_text">Sign up</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_search_packs">SearchPacksActivity</string>
    <string name="title_activity_see_available_packs">SeeAvailablePacks</string>
    <string name="title_activity_lists">ListsActivity</string>
    <string name="title_activity_display_cards_in_list">DisplayCardsInList</string>
    <string name="title_activity_assign_buddy">AssignBuddy</string>
    <string name="title_activity_display_profile">DisplayProfile</string>
    <string name="title_activity_account">AccountActivity</string>
</resources>
